make sure templates dir exists

--- a/debian/rules
+++ b/debian/rules
@@ -12,6 +12,7 @@ BUILD_ROOT=$(CURDIR)/debian/tmp
 install:
 	rm -rf ${BUILD_ROOT}
 	mkdir -p ${BUILD_ROOT}/var/openpanel/http/images
+	mkdir -p ${BUILD_ROOT}/var/openpanel/http/templates
 	cp -f OpenPanelLogo.png ${BUILD_ROOT}/var/openpanel/http/images
 	sed -e 's!<div class="labelElement" style="cursor: default; ">Username:</div>!!' -e 's!<input type="text" name="userName" id="userName" tabindex="1" style="width: 154px; ">!<input type="hidden" name="userName" id="userName" value="openpanel-admin">!' < /var/openpanel/http/index.html > ${BUILD_ROOT}/var/openpanel/http/index.html
 	cp -f OpenPanelLogoBig.png ${BUILD_ROOT}/var/openpanel/http/images
